--- a/AnselGunther.com.html
+++ b/AnselGunther.com.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/x-icon" href="/Users/anselgunther/Desktop/Personal Website/template/fav.ico">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="./AnselGunther.com_files/style.css"> <!--here's where you link your specific css file. You can name it anything, or just leave it as style.css-->
+<link rel="stylesheet" type="text/css" href="style.css"> <!--here's where you link your specific css file. You can name it anything, or just leave it as style.css-->
 </head>
 
 <body>
