--- a/AnselGunther.com.html
+++ b/AnselGunther.com.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>AnselGunther.com</title>
-<link rel="icon" type="image/x-icon" href="/Users/anselgunther/Desktop/Personal Website/template/fav.ico">
+<link rel="icon" type="image/x-icon" href="fav.ico">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css"> <!--here's where you link your specific css file. You can name it anything, or just leave it as style.css-->
